Closed Bug 1856156 Opened 2 years ago Closed 2 years ago

Failing WPT in css/selectors/dir-pseudo-on-input-element.html

Categories

(Core :: CSS Parsing and Computation, defect)

defect

Tracking

()

RESOLVED FIXED
123 Branch
Tracking Status
firefox123 --- fixed

People

(Reporter: twisniewski, Assigned: emilio)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

We're failing this test in https://wpt.fyi/results/css/selectors/dir-pseudo-on-input-element.html:

dynamic changes to type of input elements affect whether value is used for dir=auto

The severity field is not set for this bug.
:alaskanemily, could you have a look please?

For more information, please visit BugBot documentation.

Flags: needinfo?(emcdonough)
Severity: -- → S3

While working on bug 1858084, I guess a fix might be to call OnValueChanged or SetDirectionFromValue somewhere here i.e. in HandleTypeChange for case VALUE_MODE_DEFAULT.

Flags: needinfo?(emcdonough) → needinfo?(emilio)
Assignee: nobody → emilio
Status: NEW → ASSIGNED

A bit neater this way.

Depends on D198588

Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/14ed8bcf372c Recompute auto directionality on input type changes. r=smaug https://hg.mozilla.org/integration/autoland/rev/f23204fe8592 Make Directionality an enum class. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 123 Branch
Regressions: 1888595
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: