Bug 1856156 - Recompute auto directionality on input type changes. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D198588